--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myFlix</title>
     <!-- No SCSS included, imported from index.jsx file -->
+    <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
+    />
 </head>
 <body>
     <div class="app-container"></div>
