--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+    <link rel="FilmReel Shortcut Icon" href="../img/filmreel.svg" />
     <title>myFlix</title>
     <!-- No SCSS included, imported from index.jsx file -->
     <link
